--- a/WA_CombugasCC/bin/WA_CombugasCC.dll.config
+++ b/WA_CombugasCC/bin/WA_CombugasCC.dll.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="combugasCCConnectionString" connectionString="Data Source=softlag.sytes.net;Initial Catalog=combugasCC;User ID=sa;Password=Serveraw16*"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
