--- a/WA_CombugasCC/Web.config
+++ b/WA_CombugasCC/Web.config
@@ -4,17 +4,20 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
   <connectionStrings>
     <add name="combugasCCConnectionString" connectionString="Data Source=softlag.sytes.net;Initial Catalog=combugasCC;User ID=sa;Password=Serveraw16*"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <sessionState mode="InProc" cookieless="false" timeout="10"></sessionState>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
   </system.web>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
